fix <pre> styling (unreadable when background-color is dark)

--- a/assets/css/core/typography.scss
+++ b/assets/css/core/typography.scss
@@ -57,6 +57,7 @@ address {
 }
 
 pre {
+	color: #000;
 	background: #eee;
 	font-family: "Courier 10 Pitch", Courier, monospace;
 	font-size: 0.9375em;
@@ -65,6 +66,7 @@ pre {
 	max-width: 100%;
 	overflow: auto;
 	padding: 1.6em;
+	border-radius: 4px;
 
 	code {
 		background: none;
